[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.1"

[dev-dependencies]
solana-program = "1.9.1"
solana-sdk = "1.9.1"

[lib]
crate-type = ["cdylib", "lib"]